# zrok-mcp

./: Dockerfile  README.md  pyproject.toml
src/zrok_mcp/: __init__.py  server.py
