[project]
name = "zrok-mcp"
version = "0.1.0"
description = "MCP server for zrok - secure sharing platform built on OpenZiti"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.6.0",
    "zrok2>=0.4.0",
]

[project.scripts]
zrok-mcp = "zrok_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zrok_mcp"]
